# enterprise

./: Cargo.toml  README.md
actix-web/: Cargo.toml
actix-web/src/: main.rs
actix_web/: Cargo.toml
auth-service/: .env.example  Cargo.toml  README.md
auth-service/src/: graphql.rs  lib.rs  main.rs
auth-service/src/db/: mod.rs  model.rs  repository.rs
authentication/: Cargo.toml  README.md
authentication/src/: config.rs  constants.rs  email_service.rs  lib.rs  main.rs  models.rs  schema.rs
authentication/src/api/: account_controller.rs  invitation_controller.rs  ping_controller.rs
authentication/src/config/: app.rs  db.rs
authentication/src/handlers/: auth.rs  invitation.rs  mod.rs  register.rs
authentication/src/middleware/: auth_middleware.rs
authentication/src/utils/: token_utils.rs
basic-training/: Cargo.toml
chat/: Cargo.toml
chat/src/: main.rs  routes.rs  server.rs  session.rs
chat/src/asteroid/: chat.rs  mod.rs
coinbase/: Cargo.toml  README.md
coinbase/src/: main.rs
common-utils/: Cargo.toml
common-utils/src/: lib.rs
exchange/: Cargo.toml
exchange/src/: lib.rs  main.rs
exchange/src/engine/: domain.rs  orderbook.rs
exchange/src/enginex/: domain.rs  order_queues.rs  orderbook.rs  orders.rs  validation.rs
gql-auth-service/: Cargo.toml  README.md
gql-auth-service/src/: error.rs  main.rs
gql-auth-service/src/db/: auth.rs  mod.rs
gql-auth-service/src/graphql/: query.rs
gql-auth-service/src/models/: auth.rs  user.rs
gql-auth-service/src/utils/: jwt.rs  mod.rs
graphql-backend/: Cargo.toml
graphql-backend/migrations/2023-09-27-164323_create_users/: up.sql
graphql-backend/src/: main.rs
graphql-backend/src/db/: auth.rs  schema.rs
graphql-backend/src/graphql/: mod.rs  mutation.rs  query.rs  server.rs  users.rs
graphql-backend/src/models/: auth.rs  mod.rs  user.rs
graphql-backend/src/utils/: auth.rs
graphql-exchange/: Cargo.toml  README.md
graphql-exchange/migrations/2022-03-20-045449_orders/: up.sql
graphql-exchange/src/: main.rs  schema.rs
graphql-exchange/src/app/: mod.rs  mutation.rs  orders.rs  query.rs
graphql-exchange/src/db/: mod.rs
graphql-exchange/src/models/: mod.rs  order.rs
iot/: Cargo.toml
iot-one/: Cargo.toml
iot-one/src/: main.rs
iot-retrieval-svc/: Cargo.toml
iot-retrieval-svc/migrations/2022-05-23-225002_create_media_datas/: up.sql
iot-retrieval-svc/migrations/2022-05-23-225154_comment/: up.sql
iot-retrieval-svc/migrations/2022-05-24-015020_video_metadata/: up.sql
iot-retrieval-svc/migrations/2022-05-24-015124_image_metadata/: down.sql  up.sql
iot-retrieval-svc/src/: config.rs  errors.rs  main.rs
iot-retrieval-svc/src/actions/: media_data.rs  mod.rs
iot-retrieval-svc/src/api/: media_controller.rs  mod.rs
iot-retrieval-svc/src/database/: mod.rs  schema.rs
iot-retrieval-svc/src/models/: comment.rs  health_check.rs  media_data.rs  metadata.rs
iot/migrations/2022-05-24-005201_health_checks/: up.sql
iot/migrations/2022-05-24-015124_image_metadata/: up.sql
iot/src/: config.rs  main.rs  schema.rs
iot/src/api/: media_controller.rs  ping_controller.rs
iot/src/database/: schema.rs
iot/src/models/: media_data.rs  metadata.rs  mod.rs
kafka-candle-strategy/: .env.example  Cargo.toml  README.md
kafka-candle-strategy/src/: main.rs
kafka-consumer/: .env.example  Cargo.toml
kafka-consumer/src/: main.rs
kitchen/: Cargo.toml
kitchen/src/utils/: auth.rs  mod.rs  pagination.rs
magician/: Cargo.toml  README.md
magician/migrations/2022-03-04-035616_create_rituals/: up.sql  (+1 more)
magician/src/: auth_handler.rs  email_service.rs  invitation_handler.rs  lib.rs  models.rs  register_handler.rs  ritual_handler.rs  schema.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
orderbook/: Cargo.toml
orderbook/src/: lib.rs
orderbook/src/enginex/: orderbook.rs
orderbook/src/guid/: domain.rs  orderbook.rs
paper-exchange/: Cargo.toml
paper-exchange/migrations/2022-03-20-045449_orders/: up.sql
paper-exchange/migrations/2022-04-17-001918_fills/: down.sql
paper-exchange/src/: lib.rs  main.rs  models.rs  schema.rs
paper-exchange/src/routes/: orders.rs
prophet/: Cargo.toml  README.md
prophet/src/: main.rs
ritual/: Cargo.toml
ritual/src/: email_service.rs  main.rs  models.rs  schema.rs
sandbox-1/: Cargo.toml
sandbox-2/: Cargo.toml
sandbox-3/: Cargo.toml
sandbox-3/src/: main.rs
sandbox-bevy/: Cargo.toml
sandbox-bevy/src/: main.rs
sandbox-exchange/: Cargo.toml
sandbox-exchange/src/: lib.rs  main.rs  schema.rs
sandbox-grin/: Cargo.toml
sandbox-grin/src/: main.rs
sandbox-one/: Cargo.toml
sandbox-one/src/: main.rs
sandbox-smart-pointers/src/: main.rs
sandbox-snake/: Cargo.toml
sandbox-snake/src/: main.rs
sandbox-threading/: Cargo.toml
sandbox-three/: Cargo.toml
sandbox-three/tests/: integration_test.rs
sandbox-twenty/: Cargo.toml
sandbox-twenty/src/: lib.rs
sandbox-two/: Cargo.toml
sandbox_1/: Cargo.toml
sandbox_1/src/: main.rs
sandbox_2/: Cargo.toml
sandbox_2/src/: main.rs
sandbox_3/: Cargo.toml
sandbox_3/src/: lib.rs  main.rs
sandbox_3/tests/: integration_test.rs
tarot/: Cargo.toml
tarot/src/: main.rs
webrtc/src/: main.rs
x-authentication/src/: config.rs  lib.rs
x-bevy/src/: main.rs
x-chat/: Cargo.toml
x-chat/src/: config.rs  session.rs
x-grin/: Cargo.toml
x-iot-retrieval-svc/: Cargo.toml  README.md
x-iot-retrieval-svc/src/: config.rs
x-library/: Cargo.toml
x-oop/: Cargo.toml
x-oop/src/: lib.rs  main.rs
x-orderbook/: Cargo.toml
x-paper-exchange/src/: lib.rs
x-ritual/: Cargo.toml  README.md
x-ritual/migrations/2022-03-08-030651_users/: up.sql
x-ritual/migrations/2022-03-08-035616_create_rituals/: up.sql
x-ritual/migrations/2022-03-09-010513_create_ritual_moments/: down.sql
x-ritual/src/: lib.rs  main.rs  schema.rs
x-ritual/src/handlers/: invitation.rs  mod.rs  register.rs
x-smart-pointers/: Cargo.toml
x-snake/: Cargo.toml
x-tarot/: Cargo.toml
x-tarot/src/: main.rs
x-tarot/src/game/: mod.rs  splash.rs
x-threading/src/: main.rs
x-webrtc/: Cargo.toml
(+53 files in other folders)
