[workspace]
resolver="2"

members = [
    "chat",
    "exchange",
    "iot-one",
    "minigrep",
    "sandbox-bevy",
    "sandbox-exchange",
    "sandbox-smart-pointers",
    "sandbox-snake",
    "sandbox-threading",
    "sandbox-one",
    "sandbox-oop",
    "sandbox-two",
    "sandbox-three",
    "sandbox-twenty",
    "tarot"
]