[workspace]
resolver="2"

members = [
    "authentication",
    "chat",
    "exchange",
    "iot-one",
    "ritual",
    "minigrep",
    "sandbox-bevy",
    "paper-exchange",
    "sandbox-smart-pointers",
    "sandbox-snake",
    "sandbox-threading",
    "sandbox-one",
    "sandbox-oop",
    "sandbox-two",
    "sandbox-three",
    "sandbox-twenty",
    "tarot"
]