[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-cors = "0.5.4"
actix-web = "4"
actix-web-actors = "4.1"
actix-files = "0.6"

dotenv = "0.14.1"
rand = "0.8"
bytes = "0.5"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.9"
log = "0.4"
serde = "1"
serde_json = "1"
