[package]
name = "coinbase"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
coinbase-pro-rs = "0.8.1"
futures = "0.3.8"
tokio = { version = "1.18.0", features = ["full"] }

