[package]
name = "common-utils"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.2"
