[package]
name = "iot-retrieval-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
library = { path = "../library" }

## Web stuffs
alcoholic_jwt = "1.0.0"
actix-cors = "0.6.1"
actix-web = "4"
actix-web-lab = "0.10"
actix-web-httpauth = "0.6.0"
actix-service = "2.0.2"
jsonwebtoken = "8.1.0"

argonautica = "0.2.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99"

# Database stuffs
diesel = { version = "1.4.5", features = ["postgres","sqlite", "uuidv07", "r2d2", "chrono", "numeric", "serde_json"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] } 
diesel-geography = { path = "../../diesel-geography", features = ["serde"] }
r2d2 = "0.8.8"

# environment stuffs
dotenv = "0.15"
pretty_env_logger = "0.4.0"
log = "0.4.16"

futures = "0.3.12"
futures-util = "0.3.21"
lazy_static = "1.4"
rust-argon2 = "1"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.3"

# GraphQL support 
juniper = "0.14"

### Diesel only supports:: bigdecimal >= 0.0.10, < 0.0.15 optional
bigdecimal = { version =  "0.1.0", features = ["serde"] }

## For the json serial / deserial 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For error chaining
error-chain = "0.12.2"

# For the Derive foer the Enumerations
enum-primitive-derive = "0.1.2"
num-traits = "0.2.11"

# For command line parsing
clap = { version = "3.1.18", features = ["derive", "env"] }