[package]
name = "iot"
version = "0.1.0"
edition = "2021"

[dependencies]
library = { path = "../library" }
actix-cors = "0.6.1"
actix-web-httpauth = "0.6.0"
actix-service = "2.0.2"
actix-web = "4"
actix-identity = "0.4"
argonautica = "0.2.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4.5", features = ["postgres","sqlite", "uuidv07", "r2d2", "chrono", "numeric", "serde_json"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] } 
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3.12"
futures-util = "0.3.21"
lazy_static = "1.4"
r2d2 = "0.8.8"
rust-argon2 = "1"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.3"
log = "0.4.16"
alcoholic_jwt = "1.0.0"
actix-rt = "2.7.0"
jsonwebtoken = "8.1.0"
juniper = "0.14.2"

### Diesel only supports:: bigdecimal >= 0.0.10, < 0.0.15 optional
bigdecimal = { version =  "0.1.0", features = ["serde"] }

## For the iron parser to parse the object to a struct
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For error chaining
error-chain = "0.12.2"

# For the Derive foer the Enumerations
enum-primitive-derive = "0.1.2"
num-traits = "0.2.11"

