[package]
name = "kafka-candle-strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bigdecimal = "0.4.1"
coinbase-pro-rs = "0.8.1"
chrono = "0.4.31"
dotenv = "0.15.0"
kafka = "0.10.0"

# technical analysis 
ta = "0.5.0"         

tracing = "0.1.37"
tracing-subscriber = "0.3"
serde_json = "1.0.107"

# logging
log = "0.4.14"
pretty_env_logger = "0.5.0"

