[package]
name = "kitchen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.4"
actix-web = "4"
argonautica = "0.2.0"
derive_more = "0.99"
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
lazy_static = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.3"