[package]
name = "orderbook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kitchen = { path = "../kitchen" }
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
bigdecimal = { version = "0.1.2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3