[package]
name = "paper-exchange"
version = "0.1.0"
edition = "2018"

[lib]
name = "paper_exchange"
path = "src/lib.rs"

[dependencies]
exchange = { path = "../exchange" }
kitchen = { path = "../kitchen" }
actix-identity = "0.4"
actix-web = "4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
env_logger = "0.8"
