[package]
name = "paper-exchange"
version = "0.1.0"
edition = "2018"

[lib]
name = "paper_exchange"
path = "src/lib.rs"

[dependencies]
orderbook = { path = "../orderbook" }
kitchen = { path = "../kitchen" }
authentication = { path = "../authentication" }
actix-identity = "0.4"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
env_logger = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.bigdecimal]
version = "0.1.2"
features = ["serde"]

[dependencies.diesel]
version = "1.4.5"
features = ["postgres","uuidv07", "r2d2", "chrono", "numeric", "bigdecimal"]
