[package]
name = "sandbox-grin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
dotenv = "0.15"
easy-jsonrpc-mw = "0.5.4"
log = "0.4.16"
jsonrpc-core = "18.0.0"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.20.1", features = ["full"] }

grin_api = { path = "../../grin/api" } 
grin_pool = { path = "../../grin/pool" }
