[package]
name = "ritual"
version = "0.1.0"
edition = "2021"

[dependencies]
library = { path = "../library" }
actix-web = "4"
actix-identity = "0.4"
argonautica = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3.6"
lazy_static = "1.4"
r2d2 = "0.8"
rust-argon2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.3"


