[package]
name = "tarot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.6.0"
bevy_asset_ron = "0.3.0"
rand = "0.8.4"
ron = "0.7.0" 
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
bevy_easings = "0.5.0"
