[package]
name = "webrtc"
version = "0.5.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "Examples of WebRTC.rs stack"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/examples"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.5.1"
tokio = { version = "1.15", features = ["full"] }
env_logger = "0.9"
clap = "3.0"
hyper = { version = "0.14", features = ["full"] }
signal = { path = "./signal" }
tokio-util = { version="0.6", features = ["codec"] }
anyhow = "1.0"
chrono = "0.4"
log = "0.4.16"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1"
lazy_static = "1.4"
rand = "0.8"

[dev-dependencies]
#webrtc = { path = "../../../webrtc" }

# tokio = { version = "1.15", features = ["full"] }
# env_logger = "0.9"
# clap = "3.0"
# hyper = { version = "0.14", features = ["full"] }
# signal = { path = "./signal" }
# tokio-util = { version="0.6", features = ["codec"] }
# anyhow = "1.0"
# chrono = "0.4"
# log = "0.4.16"
# serde = { version = "1.0.102", features = ["derive"] }
# serde_json = "1.0"
# bytes = "1.1"
# lazy_static = "1.4"
# rand = "0.8"




